fixing gap between #intro and header during mobile

--- a/css/main.css
+++ b/css/main.css
@@ -19,13 +19,13 @@ header {
 }
 
 header > ul { padding: .5em 0; }
-header > ul > li { padding: 0 .75em; }
-li {
-	list-style: none;
-	display: inline-block;
-}
+header > ul > li { padding: 0 .25em; }
+li { list-style: none;  display: inline-block; }
 
-section:nth-of-type(1) { padding-top: 46px; }
+/*li:nth-of-type(1),li:nth-of-type(2) { display: inline-block; text-align: left; }
+li:nth-of-type(4), li:nth-of-type(5) { display: inline-block; text-align: left; }*/
+
+section:nth-of-type(1) { padding-top: 29px; }
 
 footer	{
 	border: 1px solid silver;
@@ -157,4 +157,6 @@ hr {
 	h3 {
 		padding-top: 27%;
 	}
+	header > ul > li { padding: 0 .75em; }
+	li { display: inline-block; }
 }
